<resources>

    <string name="wca_module_name">Car alarm</string>

    <string name="wca_use_gps">Use speed</string>
    <string name="wca_use_acc">Use acceleration</string>

    <string name="wca_speed">Speed</string>
    <string name="wca_acceleration">Acceleration</string>

    <string name="wca_status">status</string>
    <string name="wca_started">started</string>
    <string name="wca_stoped">stoped</string>
    <string name="wca_hc_info">get info about caralarm</string>
    <string name="wca_hc_start">start car alarm</string>
    <string name="wca_hc_stop">stop car alarm</string>
    <string name="wca_hc_set_speed">"set min speed to send notification  "</string>
    <string name="wca_hc_set_acc">"set min acceleration to send notification  "</string>
    <string name="wca_hc_set_active_acc">set active acceleration</string>
    <string name="wca_hc_set_active_gps">set active gps location</string>
    <string name="wca_hc_loc">send current location</string>
    <string name="wca_acc_info">acceleration level</string>
    <string name="wca_hc_get_acc">get acceleration level</string>
</resources>

