<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsCarAlarmActivity"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/BoxStyle"
        >

        <TextView
            style="@style/ModuleHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wca_module_name"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            style="@style/BoxStyle"
            >

            <CheckBox
                android:id="@+id/cbUseGps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wca_use_gps"
                android:onClick="onClick"
                style="@style/CheckBoxStyle"
                />

            <CheckBox
                android:id="@+id/cbUseAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wca_use_acc"
                android:onClick="onClick"
                style="@style/CheckBoxStyle"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                style="@style/BoxStyle"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wca_speed"
                    style="@style/BoxStyle"
                    />

                <EditText
                    android:id="@+id/etSpeed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    style="@style/BoxStyle"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:onClick="onSaveSpeedClick"
                    style="@style/BoxStyle"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/border"
                style="@style/BoxStyle"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wca_acceleration"
                    style="@style/BoxStyle"
                    />

                <EditText
                    android:id="@+id/etAcceleration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    style="@style/BoxStyle"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:onClick="onSaveAccClick"
                    style="@style/BoxStyle"
                    />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btMinimize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_close_caption"
        android:onClick="onMinimizeClick"
        style="@style/BoxStyle"
        />
    </LinearLayout>
</LinearLayout>